# Radar-mmWave

./: .gitignore  README.md
Code/: README.md
Code/Algorithms/DB Clustering/: DB_Clustering.py
Code/Algorithms/DataProcessing/: README.md  filePlot.py  fileRead.py  radar_utilsPlot.py  radar_utilsProcessing.py
Code/Algorithms/Kalman/: Kalman.py
Code/Algorithms/ObjectDetectionRadar/: ObjectDetectionRadar.py  ObjectDetectionRadar3D.py  ObjectDetectionRadar3DCluster.py  ObjectDetectionRadarCompareData.py  ObjectDetectionSubMaps.py  ObjectDetectionSubMaps3D.py  OccupancyGrid.py  README.md  RadarDetection.py  fileRead.py  plot.py  test.py  testVelocityEstimation.py
Code/Algorithms/ObjectDetectionRadar/Clustering/: dbClustering.py
Code/Algorithms/ObjectDetectionRadar/OccupancyGrid/: OccupancyGrid.py
Code/Algorithms/ObjectDetectionSelfSpeed/: ObjectDetectionWithSelfSpeed.py  selfSpeedEstimator.py
Code/Algorithms/Pipeline/: Doxyfile  Pipeline.py  PipelineLive.py  PipelineLiveRaspBerri.py  README.md  brakeController.py  dataDecoder.py  dataDecoderBrokenTimestamp.py  dbCluster.py  frameAggregator.py  kalmanFilter.py  mmwave.py  occupancyGrid.py  pointFilter.py  radarSensor.py  selfSpeedEstimator.py  veSpeedFilter.py
Code/Algorithms/PipelineThreaded/: PipelineThreaded.py  pointFilter.py
Code/Algorithms/Playground Leander/: dataDecoder.py  dataDecoderTest.py  kalmanDemo.py  kalmanDemoSimple2DMovement.py  leastSquaresTest.py  radialSpeedSimulation.py  radialSpeedSimulationRealData.py
Code/Algorithms/PoseEstimation/: PaperPlayground.py  PoseEx1.py  README.md  VelocityEstimatino.py
Code/Algorithms/SelfSpeedEstimation/: README.md  dataDecoder.py  radialSpeedSimulation.py  radialSpeedSimulationRealData.py
Code/Algorithms/SelfSpeedEstimation/Modularized/: SelfSpeedEstimationRealDataModularized.py  kalmanFilter.py  pointFilter.py
Code/Modules/: README.md
Code/Modules/DataDecoder/: dataDecoderBrokenTimestamp.py
Code/Modules/DataDecoderTI/: dataDecoderTI.py
Code/Modules/FrameAggregator/: frameAggregator.py
Code/Modules/VeSpeedFilter/: veSpeedFilter.py
Code/PlotLogs/: PlotLogs.py
Code/Python/Plot/PlotRadar/: PlotRadar.py
Code/Python/ReadFile/ReadPlot/: ReadPlot.py
Code/Radar/: CMakeLists.txt  Radar.cpp  Radar.h
Code/Radar/Radar/: App.cpp  App.h  CMakeLists.txt  Decode.cpp  Decode.h  Radar.cpp  Radar.h  RadarFrame.cpp  RadarFrame.h  ReadData.cpp  ReadData.h  SerialPort.cpp  SerialPort.h
Code/Radar/Radar/configs/: CMakeLists.txt  profile_2024_11_28T11_50_49_422_azim60_elev30.cfg  profile_2024_11_28T13_30_57_988_azim30_elev30.cfg  profile_2024_12_15T11_08_04_297.cfg  xwr68xx_AOP_profile_2024_10_31T16_15_25_003.cfg
Code/Radar/Radar/modules/radar_sensor/: CMakeLists.txt  IWR6843.cpp  IWR6843.h
Code/Radar/Radar/radar_sensor/: IWR6843.cpp  IWR6843.h  SensorData.cpp  SensorData.h
Code/Radar/Radar/radar_sensor/sensor_data/: SensorData.cpp  SensorData.h  TLVFrame.cpp  TLVFrame.h  UARTFrame.cpp  UARTFrame.h
Code/Radar/Radar/radar_sensor/sensor_data/lib/: EndianUtils.cpp  EndianUtils.h  SensorDataStr.h
Code/Radar/configs/: BestRangeRes_20fps.cfg  BestRangeRes_30fps.cfg  BestRangeRes_30fps_dis15mts.cfg  BestRangeRes_30fps_dis15mts_5mps.cfg  BestRange_20fps.cfg  BestRange_30fps.cfg  BestVelRes_30fps.cfg  CMakeLists.txt  xwr68xx_AOP_profile_2024_11_25T14_20_54_415.cfg
Code/Radar/radar-sensor/: IWR6843.cpp  IWR6843.h
Code/Radar/radar_sensor/: IWR6843.cpp
Literature/Lectures/Exercises/Matlab/ClassScripts/: ch2_myDipole.m  ch2_myFarField.m  ch2_sparseArray.m  ch2_vehicles_cp_from_10_RadarToolBox.m
Literature/Notes/: Readme.md
Literature/PDF Resources/: README.md
Literature/Presentation/: mmWave_Radar_Presentation.pptx
Literature/Radar/Kalman Filter/MATLAB code/10.SimpleKalman/: GetVolt.m  SimpleKalman.m
Logs/LogsPart4/: alu1_log_2025-01-16.csv  alu2_log_2025-01-16.csv
Logs/PlotLogs/: ObjectDetectionRadar.py  PlotLogs.py  PrintTLV.py  coordinates.csv
(+13 files in other folders)
